# lambda

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  build.bat
cmake/: dependencies.cmake  (+3 more)
lambda-core/: CMakeLists.txt
lambda-core/include/core/base/: auto_release.hpp  context.hpp  defer.hpp  error.hpp  formatter.hpp  logging.hpp  macro_utils.hpp  match.hpp
lambda-core/include/core/concurrency/: awaitable_manager.hpp  task.hpp  thread.hpp  thread_pool.hpp
lambda-core/include/core/io/: file_ostream.hpp  ostream.hpp  ostream_sink.hpp  synchronised_ostream.hpp
lambda-core/include/core/math/: vector.hpp
lambda-core/include/core/memory/: arena.hpp
lambda-core/include/core/os/: opengl_context.hpp  window.hpp  window_events.hpp
lambda-core/include/core/renderer/: renderer.hpp
lambda-core/include/core/utility/: command_line.hpp  defer.hpp  formatter.hpp
lambda-core/src/: CMakeLists.txt
lambda-core/src/base/: CMakeLists.txt  logging.cpp
lambda-core/src/concurrency/: CMakeLists.txt  awaitable_manager.cpp  thread_pool.cpp
lambda-core/src/internal/: CMakeLists.txt
lambda-core/src/internal/opengl/: CMakeLists.txt  opengl.hpp  opengl_backend.cpp  opengl_backend.hpp
lambda-core/src/internal/win32/: CMakeLists.txt  opengl_context.cpp  win32.hpp  window.cpp
lambda-core/src/io/: CMakeLists.txt  file_ostream.cpp  ostream.cpp  ostream_sink.cpp  synchronised_ostream.cpp
lambda-core/src/memory/: CMakeLists.txt  arena.cpp
lambda-core/src/os/: CMakeLists.txt  window.cpp
lambda-core/src/renderer/: CMakeLists.txt  renderer.cpp
(+72 files in other folders)
